out/old/manifests/cattle-fleet-local-system/Deployment.fleet-agent.yaml
metadata:
  name: fleet-agent
  namespace: cattle-fleet-local-system
  labels:
    app.kubernetes.io/managed-by: Helm
    objectset.rio.cattle.io/hash: 362023f752e7f1989d8b652e029bd2c658ae7c44
  annotations:
    meta.helm.sh/release-name: fleet-agent-local
    meta.helm.sh/release-namespace: cattle-fleet-local-system
    objectset.rio.cattle.io/applied: H4sIAAAAAAAA/4SUW3PiRhCF/0s/SzKIm9EbxSobKhstZVP74qJcrVELJh7NKDMtYkLpv6eGiyznQp7QZc7p1jlfcQKs5Q+yThoNCWBdu4fDEAJ4k7qABL5QrcyxIs0QQEWMBTJCcgLU2jCyNNr5W5P/RoIdcWSliQQyK4qkeZDepFREHOKONIe5MezYYh1eDoWXl8oIVKE7OqYK2gAU5qTuOu/R7SGB0TQexKNyNolpVg7nj/PiMZ9OYhrE87yIxXTyiDQT47E31VjR53Xg8tDVKPybuyu5moRfyJEiwcb66wpZ7L91u2Jd/82/9UK2yLQ7QnJqA2CqaoVMZ3kvUGHpHOdGVuQYqxoS3SjVj+I/7K97YVlKLdmPAW0KWvTua0slWUvFl8ZKvXsWeyoaJfVutdOme5y+k2j4TMLLTUNaUPel6XttyblL6S8neKPjbaFeM7dkTU0Wz0H [...]
    objectset.rio.cattle.io/id: fleet-agent-bootstrap-cattle-fleet-local-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleet-agent
  template:
    metadata:
      labels:
        app: fleet-agent
    spec:
      containers:
      - name: fleet-agent
        image: rancher/fleet-agent:v0.3.9
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: fleet-agent
      serviceAccount: fleet-agent
      securityContext: {}
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: <DOMAIN_474>/agent
                operator: In
                values:
                - 'true'
      schedulerName: default-scheduler
      tolerations:
      - key: <DOMAIN_657>/uninitialized
        operator: Equal
        value: 'true'
        effect: NoSchedule
      - key: <DOMAIN_658>/os
        operator: Equal
        value: linux
        effect: NoSchedule
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
apiVersion: apps/v1
kind: Deployment
