out/old/manifests/cattle-fleet-local-system/NetworkPolicy.default-allow-all.yaml
metadata:
  name: default-allow-all
  namespace: cattle-fleet-local-system
  labels:
    app.kubernetes.io/managed-by: Helm
    objectset.rio.cattle.io/hash: 362023f752e7f1989d8b652e029bd2c658ae7c44
  annotations:
    meta.helm.sh/release-name: fleet-agent-local
    meta.helm.sh/release-namespace: cattle-fleet-local-system
    objectset.rio.cattle.io/applied: H4sIAAAAAAAA/3yQzWrrMBCF32XWtm/i/Dna30U3pdDSTcliLI0TNYpGaKYNxvjdi3A33WQjdPQdPg6aAJN/pyyeIxiIpHfOVx/PzbWTxvO/7zVUcPXRgYHnhb5w8HaECm6k6FARzAQYIyuq5yglcv9JVoW0yZ4bi6qBis4XzxCItMYzRa17ZhXNmOqlVC8wsMVQyyhKN5grCNhTeGi+oFzAwGbfrtrNcNi1dBjWx+7oun6/a2nVHnvX2v2uQzrY7bZII94IDDga8CtojSHwvZywIEloC384TBLZMovOmUTAfEzzqQIf/8TE7pUCWeUMZprLQ/nCtzFR6cDTb72C/8vlNM8/AQAA//+YfSoLmgEAAA
    objectset.rio.cattle.io/id: fleet-agent-bootstrap-cattle-fleet-local-system
spec:
  podSelector: {}
  ingress:
  - {}
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
apiVersion: <DOMAIN_775>/v1
kind: NetworkPolicy
